--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,11 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install dependencies
+    - name: Build Projects
       run: make
-
-    - name: Run check
-      run: make check
-
-    - name: Run distcheck
-      run: make distcheck
